# textruder

./: .gitignore  CMakeLists.txt  Makefile  Textruder.cpp  Textruder.h  TextruderTest.cpp  license.txt  main.cpp  readme.md  run.sh  subcellular_automaton.txt  yessman.txt
CellularAutomaton/: CMakeLists.txt  CellularAutomaton.cpp  CellularAutomaton.h  Makefile
Feeder/: CMakeLists.txt  Feeder.cpp  Feeder.h  Makefile  Textruder.cpp  Textruder.h
Nozzle/: CMakeLists.txt  CellularAutomaton.cpp  CellularAutomaton.h  Makefile  Nozzle.cpp  Nozzle.h
